# wkt-ota-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: release.yml  test.yml
app/: __init__.py  __main__.py  cli.py  config.py  db.py  main.py  models.py  security.py  semver.py  storage.py  validation.py
docs/: ota-api-contract.md
tests/: conftest.py  test_api.py  test_cli.py  test_hardware_revision_isolation.py  test_semver.py
