[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "wkt-ota-server"
version = "1.0.0"
description = "Deployable ESP32 OTA backend for WKT Platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.9,<3.0",
    "uvicorn>=0.32,<1.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
